# 18WEB-HW07

HW07/: config.ini  main.py  my_select.py  pyproject.toml  seed.py  signup.py
HW07/migrations/versions/: dcae66bff7b6_init.py
HW07/src/: crud.py  db.py  mod.py  models.py
