[tool.poetry]
name = "hw07"
version = "0.1.0"
description = ""
authors = ["1Oleksandr <kondratiuk.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
sqlalchemy = "^2.0.24"
psycopg2-binary = "^2.9.9"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
